# pdsyntox

./: Makefile  build.sh  genmake.sh  setup.sh  try-me.sh
tmp/syntox-2.6.1/: AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  aclocal.m4  acute.sed  config.status  configure  configure.ac  install-www.sh  try-me.sh
tmp/syntox-2.6.1/autom4te.cache/: output.0  output.2  output.3  output.4  output.5  requests  traces.0  traces.1  traces.3  traces.4  traces.5
tmp/syntox-2.6.1/data/: Makefile  Makefile.am  Makefile.in  p1.grammar  p1.input  p1.lexicon  p2.grammar  p2.input  p2.lexicon  p3.grammar  p3.input  p3.lexicon  p4.grammar  p4.input  p4.lexicon  p5.grammar  p5.lexicon  p6.grammar  p6.lexicon
tmp/syntox-2.6.1/src/: Makefile  Makefile.am  Makefile.in  bits.cc  bits.hh  buildlexicon.cc  buildlexicon.hh  buildlexiconmain  buildlexiconmain.cc  colors.cc  colors.hh  detruire  entries.cc  entries.hh  entry.cc  entry.hh  enum.cc  enum.hh  environment.cc  environment.hh  errors.cc  errors.hh  errors.hh~  feature.cc  feature.hh  features.cc  features.hh  flags.cc  flags.hh  forest.cc  forest.hh  forestIdentifier.cc  forestIdentifier.hh  gitem.cc  gitem.hh  gitemset.cc  gitemset.hh  grammar.cc  grammar.hh  io.cc  (+31 more)
tmp/syntox-2.6.1/www/: chpasswd.php  conceptual.php  conceptualMenus.js  configure.php  createuser.php  customize.php  formabout.php  formchangepassword.php  formcreateuser.php  formcustomize.php  formlanguage.php  formlogin.php  forms.php  functions.php  index.php  login.php  mailto.php  pdp.html  remove.php  samples.php  save.php  synthesize.php  (+2 more)
(+90 files in other folders)
